<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synar Profiler</string>
    <string name="notification_subtitle">Service is running</string>
    <string name="started">Synar Profiler started.</string>
    <string name="stopped">Synar Profiler stopped.</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Synar Profiler Settings</string>
    <string name="accelerometer_settings_title">Profiler Settings</string>

    <!-- Operational level settings -->
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>

    <!-- Sampling period settings -->
    <string name="sampling_period_setting">Sampling Period</string>
    <string name="sampling_period_setting_details">of profiler</string>
    <string name="sampling_period_setting_title">Enter sampling period (ms)</string>

    <!-- Data flushing period settings -->
    <string name="flushing_period_setting">Data Flushing Period</string>
    <string name="flushing_period_setting_details">of profiler</string>
    <string name="flushing_period_setting_title">Enter data flushing period (ms)</string>
    <string name="quit">Quit</string>

    <!-- Tracking Sensors and descriptions -->
    <string name="battery_and_cpus_power">Battery and CPUs power</string>
    <string name="main_power_sensors">Main Power sensors</string>
    <string name="secondary_power_sensors">Secondary Power sensors</string>
    <string name="main_cpu_stats">Main CPU Stats</string>
    <string name="secondary_cpu_stats">Secondary CPU Stats</string>
    <string name="network_stats">Network Stats</string>
    <string name="other_stats">Other Stats</string>

    <!-- Category check lists -->
    <string name="track_battery_and_cpus_power">Track Battery and Cpu\'s power</string>
    <string name="track_main_power_sensors">Track main power sensors</string>
    <string name="track_secondary_power_sensors">Track secondary power sensors</string>
    <string name="track_main_cpu_stats">Track main CPU stats</string>
    <string name="track_secondary_cpu_stats">Track secondary CPU stats</string>
    <string name="track_network_stats">Track network stats</string>
    <string name="track_other_stats">Track other stats</string>

    <!-- Battery and CPUs power -->
    <string name="battery_power">Battery Power</string>
    <string name="battery_power_description">Power consumed at the battery.</string>
    <string name="cpu0_power">CPU0 Power</string>
    <string name="cpu0_power_description">Power consumed by the first CPU core.</string>
    <string name="cpu1_power">CPU1 Power</string>
    <string name="cpu1_power_description">Power consumed by the second CPU core.</string>

    <!-- Power Sensors -->

    <string name="ambient_light_sensor_power">Ambient Light Sensor Power</string>
    <string name="ambient_light_sensor_power_desc">Power consumed by the ambient light.</string>
    <string name="display_elvdd_power">Display ELVDD Power</string>
    <string name="display_elvdd_power_desc">Display I/O operations power usage.</string>
    <string name="display_io_power">Display IO Power</string>
    <string name="display_io_power_desc">Display I/O operations power usage.</string>
    <string name="display_memory_power">Display Memory Power</string>
    <string name="display_memory_power_desc">The power usage of the display memory module.</string>
    <string name="audio_dsp_power">Audio DSP Power</string>
    <string name="audio_dsp_power_desc">Power consumption of audio playback on the devices. Includes headset and speaker.</string>
    <string name="camera_analog_power">Camera Analog Power</string>
    <string name="camera_analog_power_desc">Measures power of analog circuitry of the camera in use.</string>
    <string name="camera_digital_power">Camera Digital Power</string>
    <string name="camera_digital_power_desc">Power to process the output of the analog camera.</string>
    <string name="camera_io_power">Camera IO Power</string>
    <string name="camera_io_power_desc">Consumption of I/O operations of the camera.</string>
    <string name="audio_codec_analog_power">Audio Codec Analog Power</string>
    <string name="audio_codec_analog_power_desc">audio_codec_analog_power</string>
    <string name="audio_codec_io_power">Audio Codec IO Power</string>
    <string name="audio_codec_vddcx_1_power">Audio Codec VDDCX_1 Power</string>
    <string name="digital_core_power">Digital Core Power</string>
    <string name="digital_core_power_desc">Digital Core includes the modem power consumption.</string>
    <string name="dram_vdd1_power">DRAM VDD1 Power</string>
    <string name="dram_vdd2_power">DRAM VDD2 Power</string>
    <string name="emmc_power">eMMC Power</string>
    <string name="emmc_power_desc">Power supply line for internal flash memory.</string>
    <string name="emmc_host_interface_power">eMMC Host Interface Power</string>
    <string name="emmc_host_interface_power_desc">Power supply line for host interface.</string>
    <string name="haptics_power">Haptics Power</string>
    <string name="haptics_power_desc">Power consumption of haptics.</string>
    <string name="hdmi_power">HDMI Power</string>
    <string name="hdmi_power_desc">Main power usage of HDMI port.</string>
    <string name="internal_memory_power">Internal Memory Power</string>
    <string name="internal_memory_power_desc">Measures power consumption of internal memory.</string>
    <string name="vddpx1_lpddr2_power">VDDPX1 LPDDR2 Power</string>
    <string name="vddpx1_lpddr2_power_desc">Includes DRAM input receiver power supply, I/O power supply, EBI.</string>
    <string name="io_pad2_power">IO PAD2 Power</string>
    <string name="io_pad2_power_desc">Power consumed by I/O PAD2 operations</string>
    <string name="io_pad3_power">IO PAD3 Power</string>
    <string name="io_pad3_power_desc">Power consumed by I/O PAD3 operations</string>
    <string name="sd_card_power">SD Card Power</string>
    <string name="sd_card_power_desc">Consumption of power at the SD card.</string>
    <string name="touch_screen_power">Touch Screen Power</string>
    <string name="touch_screen_power_desc">Power consumed by the microcontroller servicing the touchscreen panel.</string>
    <string name="ism_vdd2_power">ISM VDD2 Power</string>
    <string name="vreg_l13a_power">VREG L13A Power</string>
    <string name="vreg_l13a_power_desc">Various components including combo DAC, SVIDEO, BBRX.</string>
    <string name="vreg_l21a_power">VREG L21A Power</string>
    <string name="vreg_l21a_power_desc">Power usage of various PLLs and PXOs.</string>
    <string name="vreg_l16a_power">VREG L16A Power</string>
    <string name="vreg_l16a_power_desc">Consumption of components including various PLLs, HDMI, CSI2/4.</string>

    <!-- CPUs stats -->


    <!-- CPU0 -->
    <string name="cpu0_load_user">CPU0 Load - User</string>
    <string name="cpu0_load_nice">CPU0 Load - Nice</string>
    <string name="cpu0_load_system">CPU0 Load - System</string>
    <string name="cpu0_load_idle">CPU0 Load - Idle</string>
    <string name="cpu0_load_iowait">CPU0 Load - IOWait</string>
    <string name="cpu0_frequency">CPU0 - Frequency</string>
    <string name="cpu0_online_state">CPU0 - Online State</string>
    <string name="cpu0_interrupts">CPU0 - Interrupts</string>

    <!-- CPU1 -->
    <string name="cpu1_load_user">CPU1 Load - User</string>
    <string name="cpu1_load_nice">CPU1 Load - Nice</string>
    <string name="cpu1_load_system">CPU1 Load - System</string>
    <string name="cpu1_load_idle">CPU1 Load - Idle</string>
    <string name="cpu1_load_iowait">CPU1 Load - IOWait</string>
    <string name="cpu1_frequency">CPU1 - Frequency</string>
    <string name="cpu1_online_state">CPU1 - Online State</string>
    <string name="cpu1_interrupts">CPU1 - Interrupts</string>

    <!-- Stats descriptions -->
    <string name="cpu_load_user_desc">Normal priority processes executing in user mode.</string>
    <string name="cpu_load_nice_desc">Lower priority processes executing in user mode.</string>
    <string name="cpu_load_system_desc">Processes executing in kernel mode.</string>
    <string name="cpu_load_idle_desc">No current user processes running.</string>
    <string name="cpu_load_iowait_desc">Processes waiting for I/O to complete.</string>
    <string name="cpu_frequency_desc">Clock speed for this CPU core.</string>
    <string name="cpu_online_state_desc">Whether the core is powered up or not.\n0 = Offline\n1 = Online</string>
    <string name="cpu_interrupts_desc">Number of interrupts on this CPU core.</string>

    <!-- Network Stats -->
    <string name="cellular_data_state">Cellular Data State</string>
    <string name="cellular_data_state_desc">State of the cellular radio:\n-1 = Suspended\n0 = Disconnected\n1 = Connecting\n2 = Connected, Dormant\n3 = Connected, No traffic\n4 = Connected, Sending or receiving traffic\n5 = Connected, Sending and receiving traffic</string>
    <string name="wifi_state">WIFI State</string>
    <string name="wifi_state_desc">The state of the wifi connection:\n0 = Wifi is currently being disabled\n1 = Wifi is disabled\n2 = Wifi is currently being enabled\n3 = Wifi is enabled\n4 = Wifi is an unknown state. This state will occur when an error happens while enabling or disabling</string>
    <string name="wifi_rssi">WIFI RSSI</string>
    <string name="wifi_rssi_desc">Received signal strength indicator for the Wi-Fi connection. Values are expressed as dBm.</string>

    <!-- Other Stats -->
    <string name="application_state">Application State</string>
    <string name="application_state_desc">Test point for developers to instrument their application/code. Broadcast Intent for Trepn to receive and update this value, allowing a more precise understanding of data points. Value is a signed 32-bit integer.</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="memory_usage_desc">Total memory usage of the system.</string>
    <string name="screen_state">Screen State</string>
    <string name="screen_state_desc">The state of the screen:\n0 = Off\n1 = On</string>
    <string name="sleep_state">Sleep State</string>
    <string name="sleep_state_desc">The state of the device (awake or asleep):\n0 = Asleep/Suspend\n1 = Awake</string>
    <string name="wakelocks_pref">Wakelocks</string>
    <string name="wakelocks_pref_desc">Instantaneous number of wakelocks being held.</string>

</resources>